fixe du decalage de la bar de menu quand le contenu ne génère pas de scrollbar

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
 
 .article-content-font{
     font-family: sans-serif;
+    overflow-y: scroll;
 }
 
 .code-snippet{
